tests/ui/error-codes/E0194.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/E0194.rs:3:26
   |
LL | trait Foo<T> {
   |           - first use of `T`
LL |     fn do_something(&self) -> T;
LL |     fn do_something_else<T: Clone>(&self, bar: T);
   |                          ^ already used

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0403`.
